# nes-rust

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
src/: bus.rs  controller.rs  cpu.rs  lib.rs  main.rs  mapper.rs  ppu.rs  rom.rs  util.rs
