[package]
name = "nes"
version = "0.1.0"
authors = ["Chady Kamar <chady.kamar@gmail.com>"]
edition = "2018"

[lib]
name = "nes"
path = "src/lib.rs"

[[bin]]
name = "nes_bin"
path = "src/main.rs"

[dependencies]
bitfield = "0.13.1"
log4rs = "0.8.1"
log = "0.4.6"
sdl2 = "0.32.1"

[profile.dev]
overflow-checks = false

[profile.test]
overflow-checks = false